gsk report ksyu 1

--- a/oncoFinder2/templates/report/report_detail_GSK-NCGOM.html
+++ b/oncoFinder2/templates/report/report_detail_GSK-NCGOM.html
@@ -920,8 +920,8 @@ $("#tbl_tarinfer").DataTable( {
     "dom": 'Bfrtip',
     "scrollX": true,
     "buttons": [
-               {extend: 'csv', title: file_name},
-               {extend: 'print', title: file_name}
+               {extend: 'csv', title: 'tarinfer'},
+               {extend: 'print', title: 'tarinfer'}
                
           ],
     
