--- a/oncoFinder2/templates/report/gsk_prj2_1d.html
+++ b/oncoFinder2/templates/report/gsk_prj2_1d.html
@@ -422,7 +422,7 @@
   
   <div role="tabpanel" class="tab-pane fade in active " id="mms_tab" style='overflow-x: auto;'>     <br/> 
     <h4>Table . MAN MEDIUM SM</h4>
-    <table id="tbl-mms" class="path table table-striped table-bordered" cellspacing="0" width="100%">
+    <table id="tbl-mms" class="path table table-striped table-bordered" cellspacing="0" width="100%" style='min-width:600px;'>
         <thead>
           <tr>
            <th id='pathname_th'>Pathway</th>
@@ -436,7 +436,7 @@
   
   <div role="tabpanel" class="tab-pane fade  " id="mhs_tab" style='overflow-x: auto;'>     <br/> 
     <h4>Table . MAN HIGHT SM</h4>
-    <table id="tbl-mhs" class="path table table-striped table-bordered" cellspacing="0" width="100%">
+    <table id="tbl-mhs" class="path table table-striped table-bordered" cellspacing="0" width="100%" style='min-width:600px;'>
         <thead>
           <tr>
            <th id='pathname_th'>Pathway</th>
@@ -452,7 +452,7 @@
   
   <div role="tabpanel" class="tab-pane fade  " id="mme_tab" style='overflow-x: auto;'>     <br/> 
     <h4>Table . MAN MEDIUM EC</h4>
-    <table id="tbl-mme" class="path table table-striped table-bordered" cellspacing="0" width="100%">
+    <table id="tbl-mme" class="path table table-striped table-bordered" cellspacing="0" width="100%" style='min-width:600px;'>
         <thead>
           <tr>
            <th id='pathname_th'>Pathway</th>
@@ -466,7 +466,7 @@
   
   <div role="tabpanel" class="tab-pane fade  " id="mhe_tab" style='overflow-x: auto;'>     <br/> 
     <h4>Table . MAN HIGH EC</h4>
-    <table id="tbl-mhe" class="path table table-striped table-bordered" cellspacing="0" width="100%">
+    <table id="tbl-mhe" class="path table table-striped table-bordered" cellspacing="0" width="100%" style='min-width:600px;'>
         <thead>
           <tr>
            <th id='pathname_th'>Pathway</th>
@@ -482,7 +482,7 @@
   
   <div role="tabpanel" class="tab-pane fade  " id="mhc_tab" style='overflow-x: auto;'>     <br/> 
     <h4>Table . MAN HIGH CEC</h4>
-    <table id="tbl-mhc" class="path table table-striped table-bordered" cellspacing="0" width="100%">
+    <table id="tbl-mhc" class="path table table-striped table-bordered" cellspacing="0" width="100%" style='min-width:600px;'>
         <thead>
           <tr>
            <th id='pathname_th'>Pathway</th>
