--- a/oncoFinder2/templates/report/gsk_prj2_1d.html
+++ b/oncoFinder2/templates/report/gsk_prj2_1d.html
@@ -403,16 +403,16 @@
          </li>
          
          <li role="presentation" >
-         <a href="#mhs_tab" aria-controls="settings" role="tab" data-toggle="tab" id="path_">MAN HIGHT SM</a>
+         <a href="#mhs_tab" aria-controls="settings" role="tab" data-toggle="tab" id="path_">MAN HIGH SM</a>
          </li>
          <li role="presentation" >
          <a href="#mme_tab" aria-controls="settings" role="tab" data-toggle="tab" id="path_">MAN MEDIUM EC</a>
          </li>
          <li role="presentation" >
-         <a href="#mhe_tab" aria-controls="settings" role="tab" data-toggle="tab" id="path_">MAN HIGHT EC</a>
+         <a href="#mhe_tab" aria-controls="settings" role="tab" data-toggle="tab" id="path_">MAN HIGH EC</a>
          </li>
          <li role="presentation" >
-         <a href="#mhc_tab" aria-controls="settings" role="tab" data-toggle="tab" id="path_">MAN HIGHT CEC</a>
+         <a href="#mhc_tab" aria-controls="settings" role="tab" data-toggle="tab" id="path_">MAN HIGH CEC</a>
          </li>
          
 </ul>
