--- a/oncoFinder2/templates/report/gsk_prj2_1d.html
+++ b/oncoFinder2/templates/report/gsk_prj2_1d.html
@@ -497,6 +497,26 @@
  
   
   </div>
+  
+  <center>
+  <img src='/media/report-portal/gsk_prj2_1d/Comb.png' />
+  <h4>Combined set features</h4>
+  <br/><br/>
+  
+  <img src='/media/report-portal/gsk_prj2_1d/SM.png' />
+  <h4>SM set features Day 1</h4>
+  <br/><br/>
+  
+  <img src='/media/report-portal/gsk_prj2_1d/EC.png' />
+  <h4>EC set features Day 1</h4>
+  <br/><br/>
+  
+  <img src='/media/report-portal/gsk_prj2_1d/CEC.png' />
+  <h4>CEC set features Day 1</h4>
+  <br/><br/>
+  
+  
+  </center>
           
 </div>  <!-- end of hide div -->
 <!------------- End of Pathway Analysis -->
