--- a/oncoFinder2/templates/report/gsk_prj2_1d.html
+++ b/oncoFinder2/templates/report/gsk_prj2_1d.html
@@ -499,19 +499,19 @@
   </div>
   
   <center>
-  <img src='/media/report-portal/gsk_prj2_1d/Comb.png' />
+  <img src='/media/report-portal/gsk_prj2_1d/Comb.png' width='800px'/>
   <h4>Combined set features</h4>
   <br/><br/>
   
-  <img src='/media/report-portal/gsk_prj2_1d/SM.png' />
+  <img src='/media/report-portal/gsk_prj2_1d/SM.png' width='800px'/>
   <h4>SM set features Day 1</h4>
   <br/><br/>
   
-  <img src='/media/report-portal/gsk_prj2_1d/EC.png' />
+  <img src='/media/report-portal/gsk_prj2_1d/EC.png' width='800px'/>
   <h4>EC set features Day 1</h4>
   <br/><br/>
   
-  <img src='/media/report-portal/gsk_prj2_1d/CEC.png' />
+  <img src='/media/report-portal/gsk_prj2_1d/CEC.png' width='800px'/>
   <h4>CEC set features Day 1</h4>
   <br/><br/>
   
