--- a/oncoFinder2/templates/report/report_detail_GSK-NCGOM.html
+++ b/oncoFinder2/templates/report/report_detail_GSK-NCGOM.html
@@ -69,7 +69,7 @@
           </ul>
           
           {%if report.input_data_text%}
-          <h2 id="input_data">Target Inference</h2>
+          <h2 id="input_data">Workflow Pipeline</h2>
           <hr/>
           {{report.input_data_text|safe}}
 
@@ -395,6 +395,31 @@
 </div>  <!-- end of hide div -->
 <!------------- End of Pathway Analysis -->
 
+
+<hr/>
+
+<h2>Target Inference</h2>
+<hr/>
+<table class="table table-bordered table-striped table-hover" id="tbl_tarinfer">
+<thead><tr><th title="Field #1">Gene</th>
+<th >GSK_SPS_X1_NoStim_Cmp1_vs_X1_NoStim_NoCmp</th>
+<th >GSK_SPS_X1_NoStim_Cmp2_vs_X1_NoStim_NoCmp</th>
+<th >GSK_SPS_X1_NoStim_Cmp3_vs_X1_NoStim_NoCmp</th>
+<th >GSK_SPS_X8_NoStim_Cmp1_vs_X8_NoStim_NoCmp</th>
+<th >GSK_SPS_X8_NoStim_Cmp2_vs_X8_NoStim_NoCmp</th>
+<th >GSK_SPS_X8_NoStim_Cmp3_vs_X8_NoStim_NoCmp</th>
+<th >GSK_SPS_X0.5_Stim1_NoCmp_vs_X0.5_NoStim_NoCmp</th>
+<th title="Field #9">GSK_SPS_X1_Stim1_NoCmp_vs_X1_NoStim_NoCmp</th>
+<th title="Field #10">GSK_SPS_X1_Stim2_NoCmp_vs_X1_NoStim_NoCmp</th>
+<th title="Field #11">GSK_SPS_X1_Stim3_NoCmp_vs_X1_NoStim_NoCmp</th>
+<th title="Field #12">GSK_SPS_X2_Stim1_NoCmp_vs_X2_NoStim_NoCmp</th>
+<th title="Field #13">GSK_SPS_X2_Stim2_NoCmp_vs_X2_NoStim_NoCmp</th>
+<th title="Field #14">GSK_SPS_X2_Stim3_NoCmp_vs_X2_NoStim_NoCmp</th>
+<th title="Field #15">GSK_SPS_X8_Stim1_NoCmp_vs_X8_NoStim_NoCmp</th>
+<th title="Field #16">GSK_SPS_X8_Stim2_NoCmp_vs_X8_NoStim_NoCmp</th>
+<th title="Field #17">GSK_SPS_X8_Stim3_NoCmp_vs_X8_NoStim_NoCmp</th>
+</tr></thead>
+</table>
 
 <!-- ---------------------------------Drug Scoring--------------------------------------------- -->
  <hr/> 
